[tool.poetry]
name = "moderngov"
version = "0.2.0"
description = ""
authors = ["Adam Ford <feel.wires_0c@icloud.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/afdy/moderngov"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
xmltodict = "^0.13.0"
diskcache = "^5.4.0"
validators = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
moderngov = 'moderngov.mgq:run'